kubernetes/apps/media/base/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        stack.arr: "arr-1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      dnsPolicy: ClusterFirst
      containers:
        - name: radarr
          image: linuxserver/radarr:6.4.4@sha256:7dfd049e79c00b16fbc29c3f5d96a9e7b9e73a23930b4c5b3c4541d60b366814
          ports:
            - containerPort: 7878
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /mnt/media/videos/movies
              subPath: videos/movies
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: media-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbit-download
